<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/implicit_intents"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/openActivityMi"
                android:title="@string/open_activity" />
            <item
                android:id="@+id/viewMi"
                android:title="@string/open_the_browser" />
            <item
                android:id="@+id/callMi"
                android:title="@string/call_a_number" />
            <item
                android:id="@+id/dialMi"
                android:title="@string/open_the_dialer" />
            <item
                android:id="@+id/pickMi"
                android:title="@string/pick_an_image" />
            <item
                android:id="@+id/chooserMi"
                android:title="@string/choose_a_viewer" />
        </menu>
    </item>
</menu>